  object will be created without user interaction.

- Made a major GUI change by adding a tabbed section on the left of the main screen. This area can be used to expand
  stuff in the future. I merged all the chart, group, portfolio and backtest dialogs onto the tabs. This allows quick and easy
  access to all the major stuff without having bring up dialogs all the time. To navigate through a group, just use the mouse
  or the keyboard arrow keys to move back and forth.

- Added start and end date controls to the Yahoo plugin for more precise downloads. Hopefully this will solve some of the
  foreign quote problems.
  
- Did some tuning to various classes for better speed and memory usage.

- Added individual pixmaps for each type chart object for better id.

0.17
====

- Bug fix for yahoo quotes that didn't update new symbols first time.

- Added basic indicator documentation.

- Added new quote plugin CC. This creates a continuous adjusted futures chart for each futures symbol available.

- Added status messages to all the quote plugins for monitoring download progress.

- Added an indicator plugin tutorial in the docs.

0.16
======

- added an icon for qtstalker (qtstalker.xpm)

- added font preference for charts

- Fixed bug that didn't update filelist after deleting a chart

- COT changed filenames for the annual file, updated COT quote plugin to handle old and new names.

- Fixed bug that skipped previous date when calculating MA's.

- Added a compile option to increase speed and decrease size "-Os".

- Fixed "export" all bug that seg faults when trying to export all charts.

- Added new MA support for Wilder's MA method  and fixed TR function to include first bar. Thanks to Glen for the patch.

- New quote plugin "Ratio". This is a composite that divides two symbols to produce the ratio between them.

- New quote plugin "CSV". This imports comma-separated values (CSV) ascii
  files from the local filesystem.
