@@ -1,0 +1,136 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.0//EN" "http://www.w3.org/TR/xhtml-basic/xhtml-basic10.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <meta http-equiv="Content-Type"
+ content="text/html; charset=iso-8859-1">
+  <title>Qtstalker - Table of Contents</title>
+  <meta name="generator"
+ content="amaya 6.1, see http://www.w3.org/Amaya/">
+</head>
+<body>
+<h2><u>Qtstalker: Table of Contents</u></h2>
+<h2> </h2>
+<h3><a href="intro.html">Introduction</a><span
+ style="color: rgb(0, 0, 0); background-color: rgb(250, 250, 250);"></span></h3>
+<h3><a href="install.html">Installation</a></h3>
+<h3><a href="quick.html">Getting Started: A quick howto</a></h3>
+<h3>Getting to know Qtstalker</h3>
+<ol>
+  <li><a href="main.html">Main Window</a></li>
+  <li><a href="title.html">Title Bar</a></li>
+  <li><a href="workwithcharts.html">Chart Tab</a></li>
+  <li><a href="workwithgroups.html">Group Tab</a></li>
+  <li><a href="workwithportfolios.html">Portfolio Tab</a></li>
+  <li><a href="workwithbacktest.html">Backtest Tab</a></li>
+  <li>Toolbar</li>
+  <ol>
+    <li><a href="toolbars.html">Tab Functions Toggle</a></li>
+    <li><a href="toolbars.html">Chart Grid</a></li>
+    <li><a href="toolbars.html">Scale to Screen</a><br>
+    </li>
+    <li><a href="newindicator.html">New Indicator</a></li>
+    <li><a href="datawindow.html">Data Window</a></li>
+    <li><a href="quotes.html">Quotes</a><br>
+    </li>
+    <li><a href="toolbars.html">Compression</a></li>
+    <li><a href="charttype.html">Chart Type</a></li>
+    <li><a href="toolbars.html">Bar Spacing</a></li>
+    <li><a href="toolbars.html">Bars</a></li>
+    <li><a href="toolbars.html">Chart Range</a></li>
+    <li>
+      <ol>
+      </ol>
+    </li>
+  </ol>
+  <li><a href="preferences.html">Preferneces</a><br>
+  </li>
+  <li><a href="installplugins.html">Install Plugins</a></li>
+  <li><a href="mainchart.html">Main Chart Area</a></li>
+  <li><a href="indicatorchart.html">Indicator Area</a></li>
+  <li><a href="statusbar.html">Status Bar</a></li>
+  <li><a href="chartobjects.html">Chart Objects</a></li>
+  <li><a href="backtester.html">Back Tester</a></li>
+  <ol>
+    <li><a href="backtesterrules.html">Rules</a></li>
+    <li><a href="backtesterstops.html">Stops</a></li>
+    <li><a href="backtestertesting.html">Testing</a></li>
+    <li><a href="backtesterreports.html">Reports</a></li>
+  </ol>
+  <li><a href="portfolios.html">Portfolios</a></li>
+</ol>
+<p></p>
+<h3>Quote Plugin Reference</h3>
+<ol>
+  <li><a href="cbot.html">CBOT</a></li>
+  <li><a href="cc.html"><u>CC</u></a><br>
+  </li>
+  <li><a href="cme.html">CME</a></li>
+  <li><a href="cmehistory.html">CMEHistory</a></li>
+  <li><a href="cot.html">COT</a></li>
+  <li><a href="csv.html">CSV</a></li>
+  <li><a href="indexes.html">Index</a></li>
+  <li><a href="nybot.html">NYBOT</a></li>
+  <li><a href="qtstalker.html">Qtstalker</a></li>
+  <li><a href="ratio.html">Ratio</a><br>
+  </li>
+  <li><a href="spread.html">Spread</a></li>
+  <li><a href="yahoo.html">Yahoo</a></li>
+  <li><a href="yahooquote.html">YahooQuote</a></li>
+</ol>
+<p></p>
+<h3>Indicator Reference</h3>
+<ol>
+  <li><a href="ad.html">Accumulation Distribution - AD</a></li>
+  <li><a href="atr.html">Average True Range - ATR</a></li>
+  <li><a href="bb.html">Bollinger Bands - BB</a></li>
+  <li><a href="cci.html">Commodity Channel Index - CCI</a></li>
+  <li><a href="dpo.html">Detrended Price Oscillator - DPO</a></li>
+  <li><a href="dmi.html">Directional Movement Index - DMI</a></li>
+  <li><a href="env.html">Envelope - ENV</a></li>
+  <li><a href="hlc.html">High Low Channel - HLC</a></li>
+  <li><a href="ma.html">Moving Average - MA</a></li>
+  <li><a href="macd.html">Moving Average Convergence Divergence - MACD</a></li>
+  <li><a href="maosc.html">Moving Average Oscillator - MAOSC</a></li>
+  <li><a href="mf.html">Money Flow - MF</a></li>
+  <li><a href="mom.html">Momentum - MOM</a></li>
+  <li><a href="ma2.html">Moving Average 2 Plot - MA2</a></li>
+  <li><a href="ma3.html">Moving Average 3 Plot - MA3</a></li>
+  <li><a href="nvi.html">Negative Volume Index - NVI</a></li>
+  <li><a href="obv.html">On Balance Volume - OBV</a></li>
+  <li><a href="oi.html">Open Interest - OI</a></li>
+  <li><a href="pc.html">Percent Change - PC</a></li>
+  <li><a href="per.html">Performance - PER</a></li>
+  <li><a href="pp.html">Pivot Point - PP</a></li>
+  <li><a href="pvi.html">Positive Volume Index - PVI</a></li>
+  <li><a href="pvt.html">Price Volume Trend - PVT</a></li>
+  <li><a href="roc.html">Rate of Change - ROC</a></li>
+  <li><a href="rsi.html">Relative Strength Index - RSI</a></li>
+  <li><a href="sar.html">Parabolic SAR - SAR</a></li>
+  <li><a href="sd.html">Standard Deviation - SD</a></li>
+  <li><a href="stoch.html">Stochastic - STOCH</a></li>
+  <li><a href="stochrsi.html">Stochastic RSI - STOCHRSI</a></li>
+  <li><a href="trix.html">TRIX - TRIX</a></li>
+  <li><a href="uo.html">Ultimate Oscillator - UO</a></li>
+  <li><a href="vol.html">Volume - VOL</a></li>
+  <li><a href="volr.html">Volatility Ratio - VOLR</a></li>
+  <li><a href="wad.html">Williams Accumulation Distribution - WAD</a></li>
+  <li><a href="willr.html">Williams %R - WILLR</a></li>
+</ol>
+<br>
+<h3><a href="plugintut.html">Indicator Plugin Howto</a></h3>
+<p></p>
+<h3><a href="faq.html">Frequently Asked Questions</a></h3>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+</body>
+</html>
