@@ -49,7 +49,6 @@ to update.</p>
 <p>Here is what it looks like when entering new symbols. Leave a space between
 the symbols.</p>
   
-<p><img alt="blah" src="yahoo3.png">
 </p>
   
 <p></p>
